--- a/Titan.WebApi/appsettings.json
+++ b/Titan.WebApi/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "DbConnection":  "Data Source=Titan.Tests.db",
+  "TestDbConnection": "Data Source=Titan.Tests.db",
+  "TheoryDbConnection": "Data Source=Titan.Theory.db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
